--- a/styles/global.css
+++ b/styles/global.css
@@ -16,4 +16,16 @@
     --gray-400: #878EA1;
     --gray-500: #C0C4CE;
     --gray-600: #E2E4E9;
+
+    --font-asap: "Asap", sans-serif;
+    --text-lg: 700 56px/120% var(--font-asap);
+    --text-md: 700 24px/120% var(--font-asap);
+    --text-sm: 700 16px/120% var(--font-asap);
+
+    --font-inconsolata: "Inconsolata", monospace;
+    --subtitle: 400 20px/120% var(--font-inconsolata);
+
+    --font-maven: "Maven Pro", sans-serif;
+    --text-md2: 400 16px/140% var(--font-maven);
+    --text-sm2: 400 14px/140% var(--font-maven);
 }
