--- a/styles/global.css
+++ b/styles/global.css
@@ -10,6 +10,7 @@
     --blue: #3996DB;
     --green: #82BC4F;
     --yellow: #EABD5F;
+
     --gray-100: #0D0E11;
     --gray-200: #16181D;
     --gray-300: #292C34;
@@ -34,4 +35,13 @@ body {
     background: var(--gray-200);
     color: var(--gray-500);
     font: var(--text-sm);
+}
+
+h1, h2, h2 {
+    font: inherit;
+}
+
+a {
+    text-decoration: none;
+    font: inherit;
 }
