Corrigindo background-image

--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,5 +1,5 @@
 #intro {
-    background: url(/assets/images/Background_Intro.png);
+    background: url(../assets/images/Background_Intro.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
