--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,5 +1,5 @@
 #contact {
-    background: url(/assets/images/Background_Contacts.png) no-repeat center center/cover;
+    background: url(../assets/images/Background_Contacts.png) no-repeat center center/cover;
 
     justify-items: center;
     margin-block: 128px 200px;
